fix from statements

--- a/images/enhavo-app/7.2-fpm/Dockerfile
+++ b/images/enhavo-app/7.2-fpm/Dockerfile
@@ -1,4 +1,4 @@
-FROM xqweb/symfony-capistrano:base
+FROM enhavo/enhavo-app:base
 CMD ["/sbin/my_init"]
 
 RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - && \
