fix apache directory

--- a/images/enhavo-app/7.2-apache/000-default.conf
+++ b/images/enhavo-app/7.2-apache/000-default.conf
@@ -7,13 +7,13 @@
         SetHandler proxy:unix:/run/php/php7.2-fpm.sock|fcgi://dummy
     </FilesMatch>
 
-    <Directory /var/www/project/public>
+    <Directory /var/www/current/public>
         AllowOverride All
         Order Allow,Deny
         Allow from all
     </Directory>
 
-    <Directory /var/www/project>
+    <Directory /var/www/current>
         Options FollowSymlinks
     </Directory>
 
