fix docker files and make

--- a/images/enhavo-app/7.2-apache/Dockerfile
+++ b/images/enhavo-app/7.2-apache/Dockerfile
@@ -15,16 +15,15 @@ COPY /02_apache2.bash /etc/my_init.d/02_apache2.bash
 COPY /000-default.conf /etc/apache2/sites-available/000-default.conf
 COPY /index.php /var/www/current/public/index.php
 
-RUN chmod 744 /etc/my_init.d/02_apache2.bash
-
-VOLUME ["/var/www", "/etc/apache2"]
-
-EXPOSE 80
-
-RUN apt-get update && \
+RUN chmod 744 /etc/my_init.d/02_apache2.bash && \
+    apt-get update && \
     apt-get install -y ffmpeg && \
     apt-get install -y optipng && \
     apt-get install -y jpegoptim && \
     apt-get install -y gifsicle && \
     apt-get install -y pngquant && \
     yarn global add svgo
+
+VOLUME ["/var/www", "/etc/apache2"]
+
+EXPOSE 80
