--- a/images/enhavo-app/Makefile
+++ b/images/enhavo-app/Makefile
@@ -2,20 +2,20 @@ SHELL := /bin/bash
 
 clean:
 	docker rmi enhavo/enhavo-app:base
-	docker rmi enhavo/enhavo-app:7.2
+	docker rmi enhavo/enhavo-app:7.2-fpm
 	docker rmi enhavo/enhavo-app:7.2-nginx
 	docker rmi enhavo/enhavo-app:7.2-apache
 
 base:
 	docker build --no-cache -t enhavo/enhavo-app:base base
 
-7.2: base
+7.2-fpm: base
 	docker build --no-cache -t enhavo/enhavo-app:7.2-fpm 7.2-fpm
 
-7.2-nginx: 7.2
+7.2-nginx: 7.2-fpm
 	docker build --no-cache -t enhavo/enhavo-app:7.2-nginx 7.2-nginx
 
-7.2-apache: 7.2
+7.2-apache: 7.2-fpm
 	docker build --no-cache -t enhavo/enhavo-app:7.2-apache 7.2-apache
 
 all: 7.2-nginx 7.2-apache
@@ -29,3 +29,4 @@ run-apache:
 push:
 	docker push enhavo/enhavo-app:7.2-nginx
 	docker push enhavo/enhavo-app:7.2-apache
+	docker push enhavo/enhavo-app:7.2-fpm
