update makefile for 7.3

--- a/images/enhavo-app/Makefile
+++ b/images/enhavo-app/Makefile
@@ -5,7 +5,10 @@ clean:
 	docker rmi enhavo/enhavo-app:7.2-fpm
 	docker rmi enhavo/enhavo-app:7.2-nginx
 	docker rmi enhavo/enhavo-app:7.2-apache
-
+	docker rmi enhavo/enhavo-app:7.3-fpm
+	docker rmi enhavo/enhavo-app:7.3-nginx
+	docker rmi enhavo/enhavo-app:7.3-apache
+	
 base:
 	docker build --no-cache -t enhavo/enhavo-app:base base
 
@@ -18,15 +21,19 @@ base:
 7.2-apache: 7.2-fpm
 	docker build --no-cache -t enhavo/enhavo-app:7.2-apache 7.2-apache
 
-all: 7.2-nginx 7.2-apache
+7.3-fpm: base
+	docker build --no-cache -t enhavo/enhavo-app:7.3-fpm 7.3-fpm
 
-run-nginx:
-	docker run -d -it --rm -p 8001:80 -p 2201:22 -v /root/.ssh/:/root/.ssh/ --name enhavo-app enhavo/enhavo-app:7.2-nginx
+7.3-nginx: 7.3-fpm
+	docker build --no-cache -t enhavo/enhavo-app:7.3-nginx 7.3-nginx
 
-run-apache:
-	docker run -d -it --rm -p 8001:80 -p 2201:22 -v /root/.ssh/:/root/.ssh/ --name enhavo-app enhavo/enhavo-app:7.2-apache
+7.3-apache: 7.3-fpm
+	docker build --no-cache -t enhavo/enhavo-app:7.3-apache 7.3-apache
 
 push:
 	docker push enhavo/enhavo-app:7.2-nginx
 	docker push enhavo/enhavo-app:7.2-apache
 	docker push enhavo/enhavo-app:7.2-fpm
+	docker push enhavo/enhavo-app:7.3-nginx
+	docker push enhavo/enhavo-app:7.3-apache
+	docker push enhavo/enhavo-app:7.3-fpm
