--- a/images/enhavo-app/7.3-fpm/Dockerfile
+++ b/images/enhavo-app/7.3-fpm/Dockerfile
@@ -3,6 +3,7 @@ CMD ["/sbin/my_init"]
 
 RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - && \
     echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list && \
+    add-apt-repository -y ppa:ondrej/php && \
     apt-get update && \
     apt-get install -y yarn && \
     apt-get install -y php7.3-fpm && \
