update makefile for php 7.4

--- a/images/enhavo-app/Makefile
+++ b/images/enhavo-app/Makefile
@@ -8,7 +8,10 @@ clean:
 	docker rmi enhavo/enhavo-app:7.3-fpm
 	docker rmi enhavo/enhavo-app:7.3-nginx
 	docker rmi enhavo/enhavo-app:7.3-apache
-	
+	docker rmi enhavo/enhavo-app:7.4-fpm
+	docker rmi enhavo/enhavo-app:7.4-nginx
+	docker rmi enhavo/enhavo-app:7.4-apache
+		
 base:
 	docker build --no-cache -t enhavo/enhavo-app:base base
 
@@ -30,6 +33,15 @@ base:
 7.3-apache: 7.3-fpm
 	docker build --no-cache -t enhavo/enhavo-app:7.3-apache 7.3-apache
 
+7.4-fpm: base
+	docker build --no-cache -t enhavo/enhavo-app:7.4-fpm 7.4-fpm
+
+7.4-nginx: 7.4-fpm
+	docker build --no-cache -t enhavo/enhavo-app:7.4-nginx 7.4-nginx
+
+7.4-apache: 7.4-fpm
+	docker build --no-cache -t enhavo/enhavo-app:7.4-apache 7.4-apache
+
 push:
 	docker push enhavo/enhavo-app:7.2-nginx
 	docker push enhavo/enhavo-app:7.2-apache
@@ -37,3 +49,6 @@ push:
 	docker push enhavo/enhavo-app:7.3-nginx
 	docker push enhavo/enhavo-app:7.3-apache
 	docker push enhavo/enhavo-app:7.3-fpm
+	docker push enhavo/enhavo-app:7.4-nginx
+	docker push enhavo/enhavo-app:7.4-apache
+	docker push enhavo/enhavo-app:7.4-fpm
