--- a/images/enhavo-app/Makefile
+++ b/images/enhavo-app/Makefile
@@ -42,6 +42,8 @@ base:
 7.4-apache: 7.4-fpm
 	docker build --no-cache -t enhavo/enhavo-app:7.4-apache 7.4-apache
 
+all: 7.2-fpm 7.2-apache 7.2-nginx 7.3-fpm 7.3-apache 7.3-nginx 7.4-fpm 7.4-apache 7.4-nginx
+
 push:
 	docker push enhavo/enhavo-app:7.2-nginx
 	docker push enhavo/enhavo-app:7.2-apache
