--- a/images/enhavo-app/7.2-nginx/Dockerfile
+++ b/images/enhavo-app/7.2-nginx/Dockerfile
@@ -11,14 +11,7 @@ COPY /default.conf /etc/nginx/sites-available/default
 COPY /02_nginx.bash /etc/my_init.d/02_nginx.bash
 COPY /index.php /var/www/current/public/index.php
 
-RUN chmod 744 /etc/my_init.d/02_nginx.bash && \
-    apt-get update && \
-    apt-get install -y ffmpeg && \
-    apt-get install -y optipng && \
-    apt-get install -y jpegoptim && \
-    apt-get install -y gifsicle && \
-    apt-get install -y pngquant && \
-    yarn global add svgo
+RUN chmod 744 /etc/my_init.d/02_nginx.bash
 
 VOLUME ["/var/www", "/etc/nginx"]
 
