--- a/images/enhavo-app/base/Dockerfile
+++ b/images/enhavo-app/base/Dockerfile
@@ -5,22 +5,22 @@ RUN mkdir /etc/ssh/key && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* && \
     rm -rf /var/www/html && \
     rm -f /etc/service/sshd/down && \
-    apt clean && \
+    apt-get clean && \
     curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - && \
     echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list && \
-    apt -y install curl dirmngr apt-transport-https lsb-release ca-certificates && \
+    apt-get -y install curl dirmngr apt-transport-https lsb-release ca-certificates && \
     curl -sL https://deb.nodesource.com/setup_12.x | bash - && \
-    apt -y update  && \
-    apt -y upgrade  && \
-    apt -y install nodejs && \
-    apt -y install yarn && \
-    apt -y install git && \
-    apt -y install sudo && \
-    apt -y install -y ffmpeg && \
-    apt -y install -y optipng && \
-    apt -y install -y jpegoptim && \
-    apt -y install -y gifsicle && \
-    apt -y install -y pngquant && \
+    apt-get -y update  && \
+    apt-get -y upgrade  && \
+    apt-get -y install nodejs && \
+    apt-get -y install yarn && \
+    apt-get -y install git && \
+    apt-get -y install sudo && \
+    apt-get -y install -y ffmpeg && \
+    apt-get -y install -y optipng && \
+    apt-get -y install -y jpegoptim && \
+    apt-get -y install -y gifsicle && \
+    apt-get -y install -y pngquant && \
     yarn global add svgo
 
 COPY /ssh/sshd_config /etc/ssh/sshd_config
