--- a/images/enhavo-app/7.2-fpm/Dockerfile
+++ b/images/enhavo-app/7.2-fpm/Dockerfile
@@ -12,7 +12,9 @@ RUN add-apt-repository -y ppa:ondrej/php && \
     apt-get -y install php7.2-dom && \
     apt-get -y install php7.2-intl && \
     apt-get -y install php7.2-zip && \
-    apt-get -y install composer
+    apt-get -y install composer && \
+    mkdir /var/log/php7.2-fpm && \
+    touch /var/log/php7.2-fpm/slow.log
 
 COPY /www.conf /etc/php/7.2/fpm/pool.d/www.conf
 COPY /01_php-fpm.bash /etc/my_init.d/01_php-fpm.bash
