--- a/images/enhavo-app/7.3-fpm/www.conf
+++ b/images/enhavo-app/7.3-fpm/www.conf
@@ -5,7 +5,10 @@ listen = /run/php/php7.3-fpm.sock
 listen.owner = www-data
 listen.group = www-data
 pm = dynamic
-pm.max_children = 5
+pm.max_children = 160
 pm.start_servers = 2
 pm.min_spare_servers = 1
 pm.max_spare_servers = 3
+pm.max_requests = 500
+slowlog = /var/log/php7.3-fpm/slow.log
+request_slowlog_timeout = 5s
