fix starting supervisor

--- a/images/enhavo-app/base/Dockerfile
+++ b/images/enhavo-app/base/Dockerfile
@@ -28,6 +28,7 @@ COPY /ssh/sshd_config /etc/ssh/sshd_config
 COPY /my_init.d/00_regen_ssh_host_keys.sh /etc/my_init.d/00_regen_ssh_host_keys.sh
 COPY /my_init.d/00_supervisor.sh /etc/my_init.d/00_supervisor.sh
 RUN chmod 744 /etc/my_init.d/00_regen_ssh_host_keys.sh
+RUN chmod 744 /etc/my_init.d/00_supervisor.sh
 
 VOLUME ["/etc/ssh/key", "/root/.ssh", "/etc/supervisor/conf.d"]
 
