--- a/images/enhavo-jenkins/7.4/Dockerfile
+++ b/images/enhavo-jenkins/7.4/Dockerfile
@@ -1,6 +1,8 @@
 FROM enhavo/enhavo-jenkins:base
 CMD ["/sbin/my_init"]
 
+USER root
+
 RUN add-apt-repository -y ppa:ondrej/php && \
     apt-get update && \
     apt-get -y install php7.4-fpm && \
@@ -13,3 +15,5 @@ RUN add-apt-repository -y ppa:ondrej/php && \
     apt-get -y install php7.4-intl && \
     apt-get -y install php7.4-zip && \
     apt-get -y install composer
+
+USER jenkins
