fix php package source

--- a/images/enhavo-jenkins/7.3/Dockerfile
+++ b/images/enhavo-jenkins/7.3/Dockerfile
@@ -3,9 +3,8 @@ CMD ["/sbin/my_init"]
 
 USER root
 
-RUN add-apt-repository -y ppa:ondrej/php && \
-    apt-get update && \
-    apt-get -y install php7.3-fpm && \
+RUN apt-get update && \
+    apt-get -y install php7.3 && \
     apt-get -y install php7.3-apcu && \
     apt-get -y install php7.3-mysql && \
     apt-get -y install php7.3-gd && \
