fix jenkins image

--- a/images/enhavo-jenkins/7.4/Dockerfile
+++ b/images/enhavo-jenkins/7.4/Dockerfile
@@ -1,5 +1,4 @@
 FROM enhavo/enhavo-jenkins:base
-CMD ["/sbin/my_init"]
 
 USER root
 
@@ -15,4 +14,4 @@ RUN apt-get update && \
     apt-get -y install php7.4-zip && \
     apt-get -y install composer
 
-USER docker run -it --rm enhavo/enhavo-jenkins:base
+USER jenkins
