add sudo for bundler

--- a/images/enhavo-jenkins/base/Dockerfile
+++ b/images/enhavo-jenkins/base/Dockerfile
@@ -28,4 +28,6 @@ RUN apt-get -y update && \
     apt-get -y install supervisor && \
     yarn global add svgo
 
+COPY etc/sudoers /etc/sudoers
+
 USER jenkins
