--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,33 +10,33 @@ jobs:
         name: "Build"
         steps:
             - uses: actions/checkout@v1
-            
+
             - name: Build base image
-              run: docker build --no-cache -t enhavo/enhavo-app:base base
+              run: docker build --no-cache -t enhavo/enhavo-app:base images/base
 
             - name: Push the tagged Docker image
-              run: docker build --no-cache -t enhavo/enhavo-app:7.2-fpm-latest 7.2-fpm
+              run: docker build --no-cache -t enhavo/enhavo-app:7.2-fpm-latest images/7.2-fpm
 
             - name: Push the tagged Docker image
-              run: docker build --no-cache -t enhavo/enhavo-app:7.2-nginx-latest 7.2-nginx
+              run: docker build --no-cache -t enhavo/enhavo-app:7.2-nginx-latest images/7.2-nginx
 
             - name: Push the tagged Docker image
-              run: docker build --no-cache -t enhavo/enhavo-app:7.2-apache-latest 7.2-apache
+              run: docker build --no-cache -t enhavo/enhavo-app:7.2-apache-latest images/7.2-apache
 
             - name: Push the tagged Docker image
-              run: docker build --no-cache -t enhavo/enhavo-app:7.3-fpm-latest 7.3-fpm
+              run: docker build --no-cache -t enhavo/enhavo-app:7.3-fpm-latest images/7.3-fpm
 
             - name: Push the tagged Docker image
-              run: docker build --no-cache -t enhavo/enhavo-app:7.3-nginx-latest 7.3-nginx
+              run: docker build --no-cache -t enhavo/enhavo-app:7.3-nginx-latest images/7.3-nginx
 
             - name: Push the tagged Docker image
-              run: docker build --no-cache -t enhavo/enhavo-app:7.3-apache-latest 7.3-apache
+              run: docker build --no-cache -t enhavo/enhavo-app:7.3-apache-latest images/7.3-apache
 
             - name: Push the tagged Docker image
-              run: docker build --no-cache -t enhavo/enhavo-app:7.4-fpm-latest 7.4-fpm
+              run: docker build --no-cache -t enhavo/enhavo-app:7.4-fpm-latest images/7.4-fpm
 
             - name: Push the tagged Docker image
-              run: docker build --no-cache -t enhavo/enhavo-app:7.4-nginx-latest 7.4-nginx
+              run: docker build --no-cache -t enhavo/enhavo-app:7.4-nginx-latest images/7.4-nginx
 
             - name: Push the tagged Docker image
-              run: docker build --no-cache -t enhavo/enhavo-app:7.4-apache-latest 7.4-apache
+              run: docker build --no-cache -t enhavo/enhavo-app:7.4-apache-latest images/7.4-apache
