--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -7,20 +7,65 @@ jobs:
   build:
     runs-on: ubuntu-20.04
     name: "Build"
-    strategy:
-      matrix:
-        version: [ 7.2, 7.3, 7.4 ]
     steps:
       - uses: actions/checkout@v1
 
       - name: Build base image
         run: docker build --no-cache -t enhavo/enhavo-app:base images/base
 
-      - name: Build ${{ matrix.version }}-fpm image
-        run: docker build --no-cache -t enhavo/enhavo-app:${{ matrix.version }}-fpm-latest images/${{ matrix.version }}-fpm
+      - name: Build 7.2-fpm image
+        run: docker build --no-cache -t enhavo/enhavo-app:7.2-fpm-latest images/7.2-fpm
 
-      - name: Build ${{ matrix.version }}-nginx image
-        run: docker build --no-cache -t enhavo/enhavo-app:${{ matrix.version }}-nginx-latest images/${{ matrix.version }}-nginx
+      - name: Build 7.2-nginx image
+        run: docker build --no-cache -t enhavo/enhavo-app:7.2-nginx-latest images/7.2-nginx
 
-      - name: Build ${{ matrix.version }}-apache image
-        run: docker build --no-cache -t enhavo/enhavo-app:${{ matrix.version }}-apache-latest images/${{ matrix.version }}-apache
+      - name: Build 7.2-apache image
+        run: docker build --no-cache -t enhavo/enhavo-app:7.2-apache-latest images/7.2-apache
+
+      - name: Build 7.3-fpm image
+        run: docker build --no-cache -t enhavo/enhavo-app:7.3-fpm-latest images/7.3-fpm
+
+      - name: Build 7.3-nginx image
+        run: docker build --no-cache -t enhavo/enhavo-app:7.3-nginx-latest images/7.3-nginx
+
+      - name: Build 7.3-apache image
+        run: docker build --no-cache -t enhavo/enhavo-app:7.3-apache-latest images/7.3-apache
+
+      - name: Build 7.4-fpm image
+        run: docker build --no-cache -t enhavo/enhavo-app:7.4-fpm-latest images/7.4-fpm
+
+      - name: Build 7.4-nginx image
+        run: docker build --no-cache -t enhavo/enhavo-app:7.4-nginx-latest images/7.4-nginx
+
+      - name: Build 7.4-apache image
+        run: docker build --no-cache -t enhavo/enhavo-app:7.4-apache-latest images/7.4-apache
+
+      - name: Login to DockerHub Registry
+        run: echo ${{ secrets.DOCKER_HUB_PASSWORD }} | docker login -u ${{ secrets.DOCKER_HUB_USER }} --password-stdin
+
+      - name: Push 7.2-nginx image
+        run: docker push enhavo/enhavo-app:7.2-nginx-latest
+
+      - name: Push 7.2-fpm image
+        run: docker push enhavo/enhavo-app:7.2-fpm-latest
+
+      - name: Push 7.2-apache image
+        run: docker push enhavo/enhavo-app:7.2-apache-latest
+
+      - name: Push 7.3-nginx image
+        run: docker push enhavo/enhavo-app:7.3-nginx-latest
+
+      - name: Push 7.3-apache image
+        run: docker push enhavo/enhavo-app:7.3-apache-latest
+
+      - name: Push 7.3-fpm image
+        run: docker push enhavo/enhavo-app:7.3-fpm-latest
+
+      - name: Push 7.4-nginx image
+        run: docker push enhavo/enhavo-app:7.4-nginx-latest
+
+      - name: Push 7.4-apache image
+        run: docker push enhavo/enhavo-app:7.4-apache-latest
+
+      - name: Push 7.4-fpm image
+        run: docker push enhavo/enhavo-app:7.4-fpm-latest
