--- a/images/base/Dockerfile
+++ b/images/base/Dockerfile
@@ -22,12 +22,22 @@ RUN mkdir /etc/ssh/key && \
     apt-get -y install gifsicle && \
     apt-get -y install pngquant && \
     apt-get -y install supervisor && \
-    yarn global add svgo
+    yarn global add svgo && \
+    curl -fsSL https://toolbelt.treasuredata.com/sh/install-ubuntu-bionic-td-agent4.sh | sh && \
+    mkdir /etc/td-agent/config.d && \
+    apt-get -y --allow-releaseinfo-change update # Because treasuredata repository has a changed message
+
+ENV FLUENTD_FLUSH_INTERVAL 2s
+ENV FLUENTD_FLUSH_MODE interval
 
 COPY /ssh/sshd_config /etc/ssh/sshd_config
 COPY /my_init.d/00_regen_ssh_host_keys.sh /etc/my_init.d/00_regen_ssh_host_keys.sh
 COPY /my_init.d/00_supervisor.sh /etc/my_init.d/00_supervisor.sh
-RUN chmod 744 /etc/my_init.d/00_regen_ssh_host_keys.sh
-RUN chmod 744 /etc/my_init.d/00_supervisor.sh
+COPY /my_init.d/00_td-agent.sh /etc/my_init.d/00_td-agent.sh
+COPY /td-agent/td-agent.conf /etc/td-agent/td-agent.conf
+
+RUN chmod 744 /etc/my_init.d/00_regen_ssh_host_keys.sh && \
+    chmod 744 /etc/my_init.d/00_supervisor.sh && \
+    chmod 744 /etc/my_init.d/00_td-agent.sh
 
 EXPOSE 22
