--- a/images/7.3-nginx/Dockerfile
+++ b/images/7.3-nginx/Dockerfile
@@ -10,6 +10,7 @@ COPY /nginx.conf /etc/nginx/nginx.conf
 COPY /default.conf /etc/nginx/sites-available/default
 COPY /02_nginx.bash /etc/my_init.d/02_nginx.bash
 COPY /index.php /var/www/current/public/index.php
+COPY /td-agent/config.d/nginx.conf /etc/td-agent/config.d/nginx.conf
 
 RUN chmod 744 /etc/my_init.d/02_nginx.bash
 
