--- a/images/8.0-apache/Dockerfile
+++ b/images/8.0-apache/Dockerfile
@@ -14,6 +14,7 @@ RUN apt-get -y install apache2 && \
 COPY /02_apache2.bash /etc/my_init.d/02_apache2.bash
 COPY /000-default.conf /etc/apache2/sites-available/000-default.conf
 COPY /index.php /var/www/current/public/index.php
+COPY /td-agent/config.d/apache.conf /etc/td-agent/config.d/apache.conf
 
 RUN chmod 744 /etc/my_init.d/02_apache2.bash
 
