--- a/images/base/td-agent/td-agent.conf
+++ b/images/base/td-agent/td-agent.conf
@@ -25,8 +25,10 @@
   @type forward
   server "#{hostname}"
   flush_mode "#{ENV['FLUENTD_FLUSH_MODE']}"
-  flush_interval "#{ENV['FLUENTD_FLUSH_INTERVAL']}"
   <server>
     host "#{ENV['FLUENTD_HOST']}"
   </server>
+  <buffer>
+   flush_interval "#{ENV['FLUENTD_FLUSH_INTERVAL']}"
+  </buffer>
 </match>
