--- a/images/7.4-apache/td-agent/config.d/apache.conf
+++ b/images/7.4-apache/td-agent/config.d/apache.conf
@@ -2,7 +2,7 @@
   @type tail
   path /var/log/apache2/access.log
   pos_file /var/log/td-agent/apache-access.log.pos
-  tag apache.access
+  tag "#{hostname}.apache.access"
   <parse>
     @type apache2
   </parse>
