--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -89,3 +89,12 @@ jobs:
 
       - name: Push 8.0-fpm image
         run: docker push enhavo/enhavo-app:8.0-fpm-latest
+
+      - name: Push 8.1-nginx image
+        run: docker push enhavo/enhavo-app:8.1-nginx-latest
+
+      - name: Push 8.1-apache image
+        run: docker push enhavo/enhavo-app:8.1-apache-latest
+
+      - name: Push 8.1-fpm image
+        run: docker push enhavo/enhavo-app:8.1-fpm-latest
