--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,6 +51,15 @@ jobs:
       - name: Build 8.0-apache image
         run: docker build --no-cache -t enhavo/enhavo-app:8.0-apache-latest images/8.0-apache
 
+      - name: Build 8.1-fpm image
+        run: docker build --no-cache -t enhavo/enhavo-app:8.1-fpm-latest images/8.1-fpm
+
+      - name: Build 8.1-nginx image
+        run: docker build --no-cache -t enhavo/enhavo-app:8.1-nginx-latest images/8.1-nginx
+
+      - name: Build 8.1-apache image
+        run: docker build --no-cache -t enhavo/enhavo-app:8.1-apache-latest images/8.1-apache
+
       - name: Set env version
         run: echo "VERSION=$(echo ${GITHUB_REF#refs/*/} | sed 's/v//g')" >> $GITHUB_ENV
 
@@ -68,6 +77,9 @@ jobs:
           docker tag enhavo/enhavo-app:8.0-nginx-latest "enhavo/enhavo-app:8.0-nginx-${{ env.VERSION }}"
           docker tag enhavo/enhavo-app:8.0-apache-latest "enhavo/enhavo-app:8.0-apache-${{ env.VERSION }}"
           docker tag enhavo/enhavo-app:8.0-fpm-latest "enhavo/enhavo-app:8.0-fpm-${{ env.VERSION }}"
+          docker tag enhavo/enhavo-app:8.1-nginx-latest "enhavo/enhavo-app:8.1-nginx-${{ env.VERSION }}"
+          docker tag enhavo/enhavo-app:8.1-apache-latest "enhavo/enhavo-app:8.1-apache-${{ env.VERSION }}"
+          docker tag enhavo/enhavo-app:8.1-fpm-latest "enhavo/enhavo-app:8.1-fpm-${{ env.VERSION }}"
 
       - name: Show images
         run: docker images
@@ -113,3 +125,12 @@ jobs:
 
       - name: Push 8.0-fpm image
         run: docker push enhavo/enhavo-app:8.0-fpm-${{ env.VERSION }}
+
+      - name: Push 8.1-nginx image
+        run: docker push enhavo/enhavo-app:8.1-nginx-${{ env.VERSION }}
+
+      - name: Push 8.1-apache image
+        run: docker push enhavo/enhavo-app:8.1-apache-${{ env.VERSION }}
+
+      - name: Push 8.1-fpm image
+        run: docker push enhavo/enhavo-app:8.1-fpm-${{ env.VERSION }}
