--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -51,6 +51,15 @@ jobs:
       - name: Build 8.0-apache image
         run: docker build --no-cache -t enhavo/enhavo-app:8.0-apache-latest images/8.0-apache
 
+      - name: Build 8.1-fpm image
+        run: docker build --no-cache -t enhavo/enhavo-app:8.0-fpm-latest images/8.1-fpm
+
+      - name: Build 8.1-nginx image
+        run: docker build --no-cache -t enhavo/enhavo-app:8.0-nginx-latest images/8.1-nginx
+
+      - name: Build 8.1-apache image
+        run: docker build --no-cache -t enhavo/enhavo-app:8.0-apache-latest images/8.1-apache
+
       - name: Login to DockerHub Registry
         run: echo ${{ secrets.DOCKER_HUB_PASSWORD }} | docker login -u ${{ secrets.DOCKER_HUB_USER }} --password-stdin
 
