--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,3 +57,21 @@ jobs:
 
             - name: Build 8.1-apache image
               run: docker build --no-cache -t enhavo/enhavo-app:8.1-apache-latest images/8.1-apache
+
+            - name: Build 8.2-fpm image
+              run: docker build --no-cache -t enhavo/enhavo-app:8.2-fpm-latest images/8.2-fpm
+
+            - name: Build 8.2-nginx image
+              run: docker build --no-cache -t enhavo/enhavo-app:8.2-nginx-latest images/8.2-nginx
+
+            - name: Build 8.2-apache image
+              run: docker build --no-cache -t enhavo/enhavo-app:8.2-apache-latest images/8.2-apache
+              
+            - name: Build 8.3-fpm image
+              run: docker build --no-cache -t enhavo/enhavo-app:8.3-fpm-latest images/8.3-fpm
+
+            - name: Build 8.3-nginx image
+              run: docker build --no-cache -t enhavo/enhavo-app:8.3-nginx-latest images/8.3-nginx
+
+            - name: Build 8.3-apache image
+              run: docker build --no-cache -t enhavo/enhavo-app:8.3-apache-latest images/8.3-apache
