--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -60,6 +60,24 @@ jobs:
       - name: Build 8.1-apache image
         run: docker build --no-cache -t enhavo/enhavo-app:8.1-apache-latest images/8.1-apache
 
+      - name: Build 8.2-fpm image
+        run: docker build --no-cache -t enhavo/enhavo-app:8.2-fpm-latest images/8.2-fpm
+
+      - name: Build 8.2-nginx image
+        run: docker build --no-cache -t enhavo/enhavo-app:8.2-nginx-latest images/8.2-nginx
+
+      - name: Build 8.2-apache image
+        run: docker build --no-cache -t enhavo/enhavo-app:8.2-apache-latest images/8.2-apache
+
+      - name: Build 8.3-fpm image
+        run: docker build --no-cache -t enhavo/enhavo-app:8.3-fpm-latest images/8.3-fpm
+
+      - name: Build 8.3-nginx image
+        run: docker build --no-cache -t enhavo/enhavo-app:8.3-nginx-latest images/8.3-nginx
+
+      - name: Build 8.3-apache image
+        run: docker build --no-cache -t enhavo/enhavo-app:8.3-apache-latest images/8.3-apache
+
       - name: Login to DockerHub Registry
         run: echo ${{ secrets.DOCKER_HUB_PASSWORD }} | docker login -u ${{ secrets.DOCKER_HUB_USER }} --password-stdin
 
@@ -107,3 +125,21 @@ jobs:
 
       - name: Push 8.1-fpm image
         run: docker push enhavo/enhavo-app:8.1-fpm-latest
+
+      - name: Push 8.2-nginx image
+        run: docker push enhavo/enhavo-app:8.2-nginx-latest
+
+      - name: Push 8.2-apache image
+        run: docker push enhavo/enhavo-app:8.2-apache-latest
+
+      - name: Push 8.2-fpm image
+        run: docker push enhavo/enhavo-app:8.2-fpm-latest
+        
+      - name: Push 8.3-nginx image
+        run: docker push enhavo/enhavo-app:8.3-nginx-latest
+
+      - name: Push 8.3-apache image
+        run: docker push enhavo/enhavo-app:8.3-apache-latest
+
+      - name: Push 8.3-fpm image
+        run: docker push enhavo/enhavo-app:8.3-fpm-latest
